<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cotio</string>
    <string name="pref_header_general">General</string>
    <string name="title_activity_cotio_settings">Cotio Settings</string>
    <string name="pref_key_num_drivers">num_drivers</string>
    <string name="pref_title_num_drivers">Number of drivers</string>
    <string name="pref_key_enabled_lockers_1">enabled_lockers_1</string>
    <string name="pref_key_enabled_lockers_2">enabled_lockers_2</string>
    <string name="pref_key_enabled_lockers_3">enabled_lockers_3</string>
    <string name="pref_key_enabled_lockers_4">enabled_lockers_4</string>
    <string name="pref_title_enabled_lockers_1">Lockers in use (driver 1)</string>
    <string name="pref_title_enabled_lockers_2">Lockers in use (driver 2)</string>
    <string name="pref_title_enabled_lockers_3">Lockers in use (driver 3)</string>
    <string name="pref_title_enabled_lockers_4">Lockers in use (driver 4)</string>
    <string name="read_code_prompt">Show the QR code on your receipt to the scanner below the screen.\n\nWait for the locker door to open.</string>
    <string name="close_door_prompt">Please close the locker door.</string>
    <string name="code_used_message">Something went wrong. Please call +358 50 431 4982.</string>
    <string name="invalid_code_message">Something went wrong. Please call +358 50 431 4982.</string>
    <string name="titlescreen_title">You get it back!</string>
    <string name="titlescreen_subtitle" />
    <string name="input_code_help">Scan not working?</string>
    <string name="input_code">Input code</string>
    <string name="finished_message">Thank you!</string>
    <string name="code_prefix_https" translatable="false">https://www.cotios.com/</string>
    <string name="code_prefix_http" translatable="false">http://www.cotios.com/</string>
    <string name="input_code_title">Please type the 8-digit code in the receipt</string>
    <string name="no_free_lockers_message">No free lockers.</string>
    <string name="add_code">Add code</string>
    <string name="code_added">Code added</string>
    <string name="code_add_error">Error when adding code: %s</string>
    <string name="pref_key_clear_code_after_use">clear_code_after_use</string>
    <string name="locker_filled">Code added. Please put the item in the locker and close it.</string>
    <string name="locker_fill_error">Error when filling locker: %s</string>
    <string name="fill_locker_info_text">Fill locker</string>
    <string name="pref_key_use_demo_codes">use_demo_codes</string>
    <string name="pref_title_clear_code_after_use">Wipe codes after use</string>
    <string name="pref_title_use_demo_codes">Use demo codes</string>
    <string name="fill_locker">Fill locker</string>
    <string name="info_text_fill">Please show the QR code to the code reader.</string>
    <string name="open_lockers_activity_name">Open lockers</string>
    <string name="remove_reservation">Remove reservation (use with caution!)</string>
    <string name="open_locker_with_button">Open locker with button</string>
    <string name="pref_title_maintenance_passcode">Huoltokoodi</string>
    <string name="pref_key_maintenance_passcode">maintenance_passcode</string>
</resources>
