<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Keep these static to have compile-time constants for keys -->

    <MultiSelectListPreference
        android:key="@string/pref_key_enabled_lockers_1"
        android:title="@string/pref_title_enabled_lockers_1"
        android:entries="@array/enabled_lockers_entries"
        android:entryValues="@array/enabled_lockers_values"
        android:defaultValue="@array/empty_array"
        />

    <MultiSelectListPreference
        android:key="@string/pref_key_enabled_lockers_2"
        android:title="@string/pref_title_enabled_lockers_2"
        android:entries="@array/enabled_lockers_entries"
        android:entryValues="@array/enabled_lockers_values"
        android:defaultValue="@array/empty_array"
        />

    <MultiSelectListPreference
        android:key="@string/pref_key_enabled_lockers_3"
        android:title="@string/pref_title_enabled_lockers_3"
        android:entries="@array/enabled_lockers_entries"
        android:entryValues="@array/enabled_lockers_values"
        android:defaultValue="@array/empty_array"
        />

    <MultiSelectListPreference
        android:key="@string/pref_key_enabled_lockers_4"
        android:title="@string/pref_title_enabled_lockers_4"
        android:entries="@array/enabled_lockers_entries"
        android:entryValues="@array/enabled_lockers_values"
        android:defaultValue="@array/empty_array"
        />

</PreferenceScreen>
